# info_ai_agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.json.example  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  run.sh
data/analyst_workdir/: generate_report.js  package-lock.json  report_script.js  script.js
mem0bot/patches/: alias_resolver.py  anthropic.py  apply_patches.sh  claude_code.py  claude_code_config.py  embeddings_configs.py  factory.py  graph_memory.py  llm_configs.py  main.py  qdrant.py  validator.py  voyage.py  voyage_reranker.py  voyage_reranker_config.py
src/: channels.py  config.py  log.py  utils.py
src/analyst/: analyst.py  memory_tools.py  qa.py  scheduler.py  world_model.py
src/pipeline/: backfill.py  classifier.py  ingest.py  preprocessor.py  prompts.py
src/tg/: ask_handler.py  backfill_handler.py  bot.py  channel_manager.py  create_session.py  formatter.py  listener.py  report_handler.py
